fix: basket-jam physics, tictactoe input, featured collection updates

--- a/src/ai-agency-flier.html
+++ b/src/ai-agency-flier.html
@@ -365,7 +365,7 @@
     <link rel="stylesheet" href="../page-theme.css">
 </head>
 <body>
-    <a href="../index.html" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">←</a>
 
     <header>
         <h1>🤖 AI Agency Flier</h1>
