--- a/src/bills_qb_game.html
+++ b/src/bills_qb_game.html
@@ -354,7 +354,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">←</a>
 
     <div class="game-wrapper">
         <h1>BUFFALO BILLS QB GAME</h1>
