--- a/src/dermpath-tetris.html
+++ b/src/dermpath-tetris.html
@@ -330,7 +330,7 @@
     </style>
 </head>
 <body>
-    <a class="home-link" href="../index.html">← HOME</a>
+    <a class="home-link" href="../index.html">←</a>
 
     <div class="game-container">
         <div class="game-header">
