--- a/src/digital_sisyphus.html
+++ b/src/digital_sisyphus.html
@@ -310,7 +310,7 @@
 
 </head>
 <body>
-    <a href="../index.html" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">←</a>
     
     <div class="container">
         <div class="scene" id="scene">
