--- a/src/foot-scratch-game.html
+++ b/src/foot-scratch-game.html
@@ -241,7 +241,7 @@
     </style>
 </head>
 <body>
-    <a class="home-link" href="../index.html">← HOME</a>
+    <a class="home-link" href="../index.html">←</a>
 
     <div class="game-container">
         <h1>FOOT SCRATCH SIMULATOR</h1>
