--- a/src/friday-wheel.html
+++ b/src/friday-wheel.html
@@ -173,7 +173,7 @@
     </style>
 </head>
 <body>
-    <a class="home-link" href="../index.html">← HOME</a>
+    <a class="home-link" href="../index.html">←</a>
 
     <div class="wheel-container">
         <h1>FRIDAY NIGHT</h1>
