--- a/src/radish_love.html
+++ b/src/radish_love.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../page-theme.css">
 </head>
 <body>
-    <a href="../index.html" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">←</a>
 
     <div class="container">
         <div class="content">
