--- a/src/sunday-wheel.html
+++ b/src/sunday-wheel.html
@@ -192,7 +192,7 @@
     </style>
 </head>
 <body>
-    <a class="home-link" href="../index.html">← HOME</a>
+    <a class="home-link" href="../index.html">←</a>
 
     <div class="wheel-container">
         <h1 class="wheel-title">SUNDAY SPIN</h1>
