--- a/src/amtrak-journey.html
+++ b/src/amtrak-journey.html
@@ -407,7 +407,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">←</a>
 
     <div class="journey-container">
         <div class="journey-header">
