--- a/src/anniversary.html
+++ b/src/anniversary.html
@@ -602,7 +602,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">←</a>
 
     <div class="container">
         <div class="header">
