--- a/src/bubba_clicker.html
+++ b/src/bubba_clicker.html
@@ -209,7 +209,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">←</a>
     
     <div class="game-wrapper">
         <div class="header">
