--- a/src/cen-schedule.html
+++ b/src/cen-schedule.html
@@ -309,7 +309,7 @@
     </style>
 </head>
 <body>
-    <a class="home-link" href="../index.html">← HOME</a>
+    <a class="home-link" href="../index.html">←</a>
 
     <div class="planner-container">
         <div class="planner-header">
