--- a/src/double_dragon_beatem_up.html
+++ b/src/double_dragon_beatem_up.html
@@ -350,7 +350,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">←</a>
 
     <div class="game-wrapper">
         <h1>DOUBLE DRAGON BEAT-EM-UP</h1>
