--- a/src/parlay_probability_viz.html
+++ b/src/parlay_probability_viz.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../page-theme.css">
 </head>
 <body>
-    <a href="../index.html" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">←</a>
 
     <div class="container">
         <header>
