--- a/src/pleasantville-clues.html
+++ b/src/pleasantville-clues.html
@@ -292,7 +292,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">←</a>
 
     <div class="utility-container">
         <h1>PLEASANTVILLE CLUES & ANSWERS</h1>
