--- a/src/rat_bushwick.html
+++ b/src/rat_bushwick.html
@@ -727,7 +727,7 @@
 
 </head>
 <body>
-    <a href="../index.html" style="position:fixed;top:20px;left:20px;z-index:9999;text-decoration:none;background:rgba(255,0,0,0.9);color:#7ec8e3;padding:12px 24px;border:2px solid #7ec8e3;box-shadow:0 0 20px rgba(0,255,65,0.5);font-family:'Courier Prime',monospace;font-size:1.2em;">← HOME</a>
+    <a href="../index.html" style="position:fixed;top:20px;left:20px;z-index:9999;text-decoration:none;background:rgba(255,0,0,0.9);color:#7ec8e3;padding:12px 24px;border:2px solid #7ec8e3;box-shadow:0 0 20px rgba(0,255,65,0.5);font-family:'Courier Prime',monospace;font-size:1.2em;">←</a>
     
     <div class="scanlines"></div>
 
