--- a/src/rhythm-test.html
+++ b/src/rhythm-test.html
@@ -192,7 +192,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">←</a>
 
     <div class="game-container">
         <h1 style="color: #00ffff; font-family: 'Courier Prime', monospace;">RHYTHM TEST</h1>
