--- a/src/riddle-river.html
+++ b/src/riddle-river.html
@@ -314,7 +314,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">←</a>
 
     <div class="progress-container">
         <div class="progress-bar"></div>
