--- a/src/rubi_infomercial.html
+++ b/src/rubi_infomercial.html
@@ -453,7 +453,7 @@
     <link rel="stylesheet" href="../page-theme.css">
 </head>
 <body>
-    <a href="../index.html" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">←</a>
 
     <div class="container">
         <!-- Header -->
