--- a/src/snake-retriever.html
+++ b/src/snake-retriever.html
@@ -348,7 +348,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">←</a>
 
     <div class="container">
         <h1>🧪 LAB ESCAPE 🧬</h1>
