--- a/src/snaker.html
+++ b/src/snaker.html
@@ -57,7 +57,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">←</a>
 
     <div class="container">
         <div class="header">
