--- a/src/subway_sub_ratio.html
+++ b/src/subway_sub_ratio.html
@@ -105,7 +105,7 @@
     </style>
 </head>
 <body>
-    <a class="home-link" href="../index.html">← HOME</a>
+    <a class="home-link" href="../index.html">←</a>
 
     <div class="container">
         <div class="header">
