--- a/src/tarot-reading.html
+++ b/src/tarot-reading.html
@@ -256,7 +256,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">←</a>
 
     <div class="tarot-container">
         <h1 class="tarot-title">✨ Tarot Reading ✨</h1>
