--- a/src/tuesday-letter-cen.html
+++ b/src/tuesday-letter-cen.html
@@ -231,7 +231,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">←</a>
 
     <div class="letter-container">
         <div class="letter-header">
