--- a/src/tv-intervention-infomercial.html
+++ b/src/tv-intervention-infomercial.html
@@ -316,7 +316,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">←</a>
 
     <div class="infomercial-container">
         <div class="hero-section">
