fix mobile bleed-through on dashboard file changes tab

--- a/gui/dashboard.html
+++ b/gui/dashboard.html
@@ -118,6 +118,22 @@
             .nav-link { font-size: 0.75em; padding: 6px 10px; }
             .tabs { overflow-x: auto; }
             .tab { padding: 8px 12px; font-size: 0.8em; white-space: nowrap; }
+
+            /* File Changes mobile fix */
+            .file-content {
+                grid-template-columns: 1fr;
+            }
+            .file-path {
+                word-break: break-all;
+                font-size: 0.9em;
+            }
+            .file-content-box {
+                max-height: 120px;
+                font-size: 0.8em;
+            }
+            .file-change {
+                padding: 8px;
+            }
         }
 
         /* Tab Navigation */
