add dynamic favicon system with default.jpg for all pages - created site-config.js for maintainable site-wide settings, updated bot generation system, added favicon to all existing 60+ html pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bot Sportello's Arcade</title>
+    <link rel="icon" type="image/jpeg" href="default.jpg">
     <link rel="preload" href="default.jpg" as="image">
+    <script src="site-config.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root {
