--- a/src/jackson_biscuit_game.html
+++ b/src/jackson_biscuit_game.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jackson's Biscuit Game - Pet Care</title>
+    <link rel="icon" type="image/jpeg" href="../default.jpg">
     <style>
         * {
             margin: 0;
