--- a/src/ai-agency-flier.html
+++ b/src/ai-agency-flier.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Agency Flier - Interactive Demo</title>
+    <link rel="icon" type="image/jpeg" href="../default.jpg">
     <style>
         * {
             margin: 0;
