--- a/src/alex_dog_mess.html
+++ b/src/alex_dog_mess.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alex's Dog Mess - Clean Up!</title>
+    <link rel="icon" type="image/jpeg" href="../default.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;600;700&family=Bangers&display=swap" rel="stylesheet">
     
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
