--- a/src/cen_veggie_haul.html
+++ b/src/cen_veggie_haul.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cen's Veggie Haul - Farmer's Market</title>
+    <link rel="icon" type="image/jpeg" href="../default.jpg">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../page-theme.css">
     <style>
