--- a/src/friday-wheel.html
+++ b/src/friday-wheel.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Friday Night Wheel</title>
+    <link rel="icon" type="image/jpeg" href="../default.jpg">
     <link rel="stylesheet" href="../page-theme.css">
     <style>
         .wheel-container {
@@ -337,10 +338,8 @@
         }
 
         spinBtn.addEventListener('click', spin);
-        spinBtn.addEventListener('touchstart', (e) => {
-            e.preventDefault();
-            spin();
-        }, { passive: false });
+        // Passive touch handler so scrolling remains smooth
+        spinBtn.addEventListener('touchstart', () => spin(), { passive: true });
 
         // Draw initial wheel
         drawWheel();
