--- a/src/frog_whack_a_mole.html
+++ b/src/frog_whack_a_mole.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frog Whack-a-Mole - Interactive Demo</title>
+    <link rel="icon" type="image/jpeg" href="../default.jpg">
     <link rel="stylesheet" href="../page-theme.css">
     <style>
         * {
