--- a/src/parlay_probability_viz.html
+++ b/src/parlay_probability_viz.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parlay Probability Visualizer</title>
+    <link rel="icon" type="image/jpeg" href="../default.jpg">
     
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../page-theme.css">
