--- a/src/sampson_deodorant.html
+++ b/src/sampson_deodorant.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAMPSON DEODORANT - The Ultimate 90s Infomercial</title>
+    <link rel="icon" type="image/jpeg" href="../default.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <style>
         * {
