--- a/src/sudoku.html
+++ b/src/sudoku.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudoku</title>
+    <link rel="icon" type="image/jpeg" href="../default.jpg">
     <link rel="stylesheet" href="../page-theme.css">
     <style>
         /* Game-specific overrides for Sudoku */
