--- a/src/zach-sleep-letter.html
+++ b/src/zach-sleep-letter.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zach Needs His Beauty Sleep</title>
+    <link rel="icon" type="image/jpeg" href="../default.jpg">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         * {
