--- a/src/tictactoe-confetti.html
+++ b/src/tictactoe-confetti.html
@@ -479,7 +479,7 @@
     <link rel="stylesheet" href="../page-theme.css">
 </head>
 <body>
-    <a href="../index.html" style="position:fixed;top:20px;left:20px;z-index:9999;text-decoration:none;background:rgba(102,126,234,0.9);color:white;padding:10px 20px;border-radius:25px;box-shadow:0 4px 10px rgba(0,0,0,0.2)">←</a>
+    <a href="../index.html" class="home-link">←</a>
 
     <div class="container">
         <div class="header">
