add back arrow and simplify dashboard title

--- a/gui/dashboard.html
+++ b/gui/dashboard.html
@@ -673,8 +673,9 @@
     <!-- Header -->
     <div class="header">
         <div class="brand">
+            <a href="/" style="color: #00ffff; text-decoration: none; margin-right: 15px; font-size: 1.5em;">←</a>
             <img src="../default.jpg" alt="Bot Sportello" class="logo-thumb" />
-            <div class="title">Bot Sportello - Agent Dashboard</div>
+            <div class="title">Agent Dashboard</div>
         </div>
         <div class="status">
             <div class="status-item">
