tighten dermpath tetris layout for mobile viewport optimization

--- a/gui/dashboard.html
+++ b/gui/dashboard.html
@@ -673,7 +673,7 @@
     <!-- Header -->
     <div class="header">
         <div class="brand">
-            <a href="/" style="color: #00ffff; text-decoration: none; margin-right: 15px; font-size: 1.5em;">←</a>
+            <a href="/" style="color: #00ffff; text-decoration: none; margin-right: 15px; font-size: 1.5em;">🐀</a>
             <img src="../default.jpg" alt="Bot Sportello" class="logo-thumb" />
             <div class="title">Agent Dashboard</div>
         </div>
