--- a/src/rat_bushwick.html
+++ b/src/rat_bushwick.html
@@ -76,6 +76,8 @@
             font-size: 1.2em;
             color: #ff55ff;
             animation: blink 1s infinite;
+            max-width: none;
+            margin: 0 auto;
         }
 
         @keyframes blink {
