--- a/src/tictactoe-confetti.html
+++ b/src/tictactoe-confetti.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.0/dist/confetti.browser.min.js"></script>
     <style>
+        :root {
+            color-scheme: light;
+            --bg: #fff5e1;
+            --bg-alt: #e5fff5;
+            --ink: #1f1b16;
+            --muted: #5d5146;
+            --primary: #ff6b4a;
+            --primary-dark: #e94c2d;
+            --secondary: #1b998b;
+            --secondary-dark: #0e6f64;
+            --gold: #f4b740;
+            --card: #ffffff;
+            --shadow: 0 24px 60px rgba(31, 27, 22, 0.18);
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -15,98 +30,119 @@
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            font-family: 'Space Grotesk', 'Segoe UI', sans-serif;
+            background:
+                radial-gradient(circle at 10% 20%, rgba(255, 214, 165, 0.65), transparent 45%),
+                radial-gradient(circle at 85% 10%, rgba(140, 224, 255, 0.45), transparent 42%),
+                radial-gradient(circle at 80% 90%, rgba(255, 170, 212, 0.35), transparent 45%),
+                linear-gradient(135deg, var(--bg), var(--bg-alt));
             min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            padding: 20px;
+            padding: 24px;
+            color: var(--ink);
             touch-action: manipulation;
         }
 
-        /* Page-specific home-link overrides removed to use shared theme */
-
         .container {
-            background: rgba(255, 255, 255, 0.95);
-            border-radius: 30px;
-            padding: 40px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-            max-width: 600px;
+            background: rgba(255, 255, 255, 0.92);
+            backdrop-filter: blur(6px);
+            border-radius: 32px;
+            padding: 38px;
+            box-shadow: var(--shadow);
+            max-width: 640px;
             width: 100%;
+            position: relative;
+            overflow: hidden;
+            animation: float-in 0.7s ease forwards;
+        }
+
+        .container::before {
+            content: "";
+            position: absolute;
+            inset: 18px;
+            border-radius: 26px;
+            border: 2px dashed rgba(31, 27, 22, 0.08);
+            pointer-events: none;
         }
 
         .header {
             text-align: center;
-            margin-bottom: 30px;
+            margin-bottom: 28px;
+            position: relative;
+            z-index: 1;
         }
 
         .title {
-            font-size: 2.5em;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            margin-bottom: 10px;
-            font-weight: 800;
+            font-family: 'Bebas Neue', 'Space Grotesk', sans-serif;
+            font-size: 3em;
+            letter-spacing: 2px;
+            color: var(--ink);
+            margin-bottom: 6px;
         }
 
         .subtitle {
-            color: #666;
+            color: var(--muted);
             font-size: 1em;
+            font-weight: 500;
         }
 
         .score-container {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 20px;
-            margin-bottom: 30px;
+            gap: 16px;
+            margin-bottom: 24px;
         }
 
         .score-box {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 20px;
-            border-radius: 15px;
+            background: linear-gradient(140deg, rgba(255, 107, 74, 0.15), rgba(255, 107, 74, 0.05));
+            color: var(--ink);
+            padding: 18px;
+            border-radius: 18px;
             text-align: center;
-            box-shadow: 0 5px 15px rgba(102, 126, 234, 0.3);
+            border: 1px solid rgba(255, 107, 74, 0.35);
+            box-shadow: 0 10px 24px rgba(233, 76, 45, 0.12);
         }
 
         .score-box.player2 {
-            background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
-            box-shadow: 0 5px 15px rgba(245, 87, 108, 0.3);
+            background: linear-gradient(140deg, rgba(27, 153, 139, 0.18), rgba(27, 153, 139, 0.05));
+            border-color: rgba(27, 153, 139, 0.35);
+            box-shadow: 0 10px 24px rgba(27, 153, 139, 0.16);
         }
 
         .score-label {
-            font-size: 0.9em;
-            opacity: 0.9;
-            margin-bottom: 5px;
+            font-size: 0.8em;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            margin-bottom: 6px;
+            color: var(--muted);
         }
 
         .score-value {
-            font-size: 2em;
-            font-weight: 800;
+            font-size: 2.1em;
+            font-weight: 700;
         }
 
         .game-status {
             text-align: center;
-            margin-bottom: 20px;
-            font-size: 1.2em;
+            margin-bottom: 18px;
+            font-size: 1.1em;
             font-weight: 600;
-            height: 30px;
-            color: #333;
+            height: 28px;
+            color: var(--ink);
         }
 
         .game-status.player1-turn {
-            color: #667eea;
+            color: var(--primary);
         }
 
         .game-status.player2-turn {
-            color: #f5576c;
+            color: var(--secondary);
         }
 
         .game-status.winner {
-            color: #27ae60;
+            color: var(--secondary);
             animation: pulse 0.6s infinite;
         }
 
@@ -119,26 +155,38 @@
             }
         }
 
+        @keyframes float-in {
+            from {
+                transform: translateY(20px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
         .board {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 10px;
-            margin-bottom: 30px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            padding: 10px;
-            border-radius: 15px;
+            margin-bottom: 24px;
+            background: linear-gradient(120deg, rgba(27, 153, 139, 0.18), rgba(244, 183, 64, 0.12));
+            padding: 12px;
+            border-radius: 20px;
+            border: 1px solid rgba(31, 27, 22, 0.08);
         }
 
         .cell {
             aspect-ratio: 1;
-            background: white;
+            background: var(--card);
             border: none;
-            border-radius: 10px;
-            font-size: 2.5em;
-            font-weight: 800;
+            border-radius: 14px;
+            font-size: 2.6em;
+            font-weight: 700;
             cursor: pointer;
-            transition: all 0.3s ease;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+            box-shadow: 0 6px 14px rgba(31, 27, 22, 0.12);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -148,8 +196,8 @@
         }
 
         .cell:hover:not(:disabled) {
-            transform: translateY(-3px);
-            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
+            transform: translateY(-2px) scale(1.01);
+            box-shadow: 0 10px 20px rgba(31, 27, 22, 0.18);
         }
 
         .cell:active:not(:disabled) {
@@ -157,46 +205,54 @@
         }
 
         .cell.x {
-            color: #667eea;
+            color: var(--primary-dark);
         }
 
         .cell.o {
-            color: #f5576c;
+            color: var(--secondary-dark);
+        }
+
+        .cell.win {
+            background: linear-gradient(135deg, rgba(244, 183, 64, 0.35), rgba(255, 107, 74, 0.2));
+            box-shadow: 0 0 0 2px rgba(244, 183, 64, 0.6), 0 16px 30px rgba(255, 107, 74, 0.25);
+            transform: scale(1.03);
         }
 
         .cell:disabled {
             cursor: not-allowed;
+            color: inherit;
+            opacity: 1;
         }
 
         .button-container {
             display: flex;
-            gap: 15px;
-            margin-bottom: 20px;
+            gap: 12px;
+            margin-bottom: 18px;
         }
 
         .btn {
             flex: 1;
-            padding: 15px 30px;
-            font-size: 1em;
+            padding: 14px 24px;
+            font-size: 0.95em;
             font-weight: 700;
             border: none;
-            border-radius: 10px;
+            border-radius: 12px;
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
             touch-action: manipulation;
             -webkit-appearance: none;
             appearance: none;
         }
 
         .btn-primary {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            box-shadow: 0 5px 15px rgba(102, 126, 234, 0.3);
+            background: linear-gradient(135deg, var(--primary), var(--gold));
+            color: #1b120c;
+            box-shadow: 0 10px 22px rgba(255, 107, 74, 0.3);
         }
 
         .btn-primary:hover {
             transform: translateY(-2px);
-            box-shadow: 0 7px 20px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 14px 26px rgba(255, 107, 74, 0.35);
         }
 
         .btn-primary:active {
@@ -204,18 +260,18 @@
         }
 
         .btn-secondary {
-            background: #f0f0f0;
-            color: #333;
-            border: 2px solid #ddd;
+            background: linear-gradient(135deg, rgba(27, 153, 139, 0.12), rgba(27, 153, 139, 0.04));
+            color: var(--secondary-dark);
+            border: 1px solid rgba(27, 153, 139, 0.35);
         }
 
         .btn-secondary:hover {
-            background: #e8e8e8;
-            border-color: #999;
+            transform: translateY(-2px);
+            box-shadow: 0 10px 22px rgba(27, 153, 139, 0.22);
         }
 
         .btn-secondary:active {
-            background: #ddd;
+            transform: translateY(0);
         }
 
         .mobile-controls {
@@ -226,56 +282,52 @@
         }
 
         .stats {
-            background: #f9f9f9;
-            padding: 20px;
-            border-radius: 10px;
+            background: rgba(31, 27, 22, 0.04);
+            padding: 16px;
+            border-radius: 14px;
             text-align: center;
-            color: #666;
+            color: var(--muted);
             font-size: 0.95em;
+            border: 1px solid rgba(31, 27, 22, 0.06);
         }
 
         .stats-item {
             display: inline-block;
-            margin: 0 15px;
+            margin: 0 14px;
         }
 
         .stats-label {
             font-weight: 600;
-            color: #333;
+            color: var(--ink);
         }
 
         @media (max-width: 768px) {
             .container {
-                padding: 25px;
+                padding: 28px;
             }
 
             .title {
-                font-size: 2em;
+                font-size: 2.4em;
             }
 
             .cell {
-                font-size: 2em;
+                font-size: 2.1em;
             }
 
             .score-container {
-                gap: 15px;
+                gap: 12px;
             }
 
             .score-box {
-                padding: 15px;
-            }
-
-            .score-label {
-                font-size: 0.85em;
+                padding: 14px;
             }
 
             .score-value {
-                font-size: 1.8em;
+                font-size: 1.9em;
             }
 
             .btn {
-                padding: 12px 20px;
-                font-size: 0.95em;
+                padding: 12px 18px;
             }
         }
 
@@ -283,17 +335,17 @@
             .home-link {
                 top: 10px;
                 left: 10px;
-                padding: 8px 15px;
+                padding: 8px 14px;
                 font-size: 0.85em;
             }
 
             .container {
-                padding: 15px;
-                border-radius: 20px;
+                padding: 18px;
+                border-radius: 22px;
             }
 
             .title {
-                font-size: 1.6em;
+                font-size: 2em;
             }
 
             .subtitle {
@@ -301,59 +353,58 @@
             }
 
             .score-container {
-                grid-template-columns: 1fr 1fr;
                 gap: 10px;
-                margin-bottom: 15px;
+                margin-bottom: 16px;
             }
 
             .score-box {
                 padding: 12px;
-                border-radius: 10px;
+                border-radius: 14px;
             }
 
             .score-label {
-                font-size: 0.75em;
+                font-size: 0.7em;
             }
 
             .score-value {
-                font-size: 1.5em;
+                font-size: 1.6em;
             }
 
             .game-status {
                 font-size: 1em;
-                margin-bottom: 15px;
+                margin-bottom: 14px;
             }
 
             .board {
                 gap: 8px;
-                padding: 8px;
-                border-radius: 12px;
-                margin-bottom: 15px;
+                padding: 10px;
+                border-radius: 16px;
+                margin-bottom: 16px;
             }
 
             .cell {
                 font-size: 1.8em;
-                border-radius: 8px;
+                border-radius: 12px;
             }
 
             .button-container {
                 gap: 10px;
-                margin-bottom: 15px;
+                margin-bottom: 14px;
             }
 
             .btn {
-                padding: 10px 15px;
+                padding: 10px 14px;
                 font-size: 0.85em;
             }
 
             .stats {
-                padding: 15px;
+                padding: 12px;
                 font-size: 0.85em;
             }
 
             .stats-item {
                 display: block;
-                margin: 8px 0;
+                margin: 6px 0;
             }
 
             .winner-content {
@@ -424,12 +475,14 @@
         }
 
         .winner-content {
-            background: white;
+            background: var(--card);
             padding: 40px;
-            border-radius: 20px;
+            border-radius: 22px;
             text-align: center;
             animation: scaleIn 0.4s ease;
             max-width: 90vw;
+            border: 1px solid rgba(31, 27, 22, 0.12);
+            box-shadow: 0 18px 40px rgba(31, 27, 22, 0.25);
         }
 
         @keyframes scaleIn {
@@ -452,15 +505,12 @@
             font-size: 2em;
             font-weight: 800;
             margin-bottom: 10px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: var(--ink);
         }
 
         .winner-subtext {
             font-size: 1.1em;
-            color: #666;
+            color: var(--muted);
             margin-bottom: 30px;
         }
 
@@ -475,7 +525,7 @@
         }
     </style>
 
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../page-theme.css">
 </head>
 <body>
@@ -483,8 +533,8 @@
 
     <div class="container">
         <div class="header">
-            <h1 class="title">🎮 Tic Tac Toe</h1>
-            <p class="subtitle">Two-Player Game with Confetti Celebration</p>
+            <h1 class="title">Tic Tac Toe</h1>
+            <p class="subtitle">Bold moves, loud wins, instant confetti.</p>
         </div>
 
         <div class="score-container">
@@ -572,13 +622,16 @@
 
         // Initialize game
         cells.forEach(cell => {
-            cell.addEventListener('click', handleCellClick);
-            cell.addEventListener('touchstart', handleCellClick, { passive: false });
+            cell.addEventListener('pointerdown', handleCellClick);
         });
 
         function handleCellClick(e) {
-            if (e.type === 'touchstart') {
+            if (e.pointerType === 'touch' || e.pointerType === 'pen') {
                 e.preventDefault();
+            }
+
+            if (e.button !== undefined && e.button !== 0) {
+                return;
             }
 
             // Get the cell element
@@ -605,6 +658,7 @@
 
         function checkGameStatus() {
             let gameWon = false;
+            let winningCombo = null;
 
             for (let condition of winningConditions) {
                 const [a, b, c] = condition;
@@ -613,6 +667,7 @@
                 }
                 if (gameBoard[a] === gameBoard[b] && gameBoard[b] === gameBoard[c]) {
                     gameWon = true;
+                    winningCombo = condition;
                     break;
                 }
             }
@@ -621,6 +676,10 @@
                 gameActive = false;
                 gameStatus.textContent = `Player ${currentPlayer === 'X' ? '1' : '2'} Wins! 🎉`;
                 gameStatus.classList.add('winner');
+
+                if (winningCombo) {
+                    highlightWinningCells(winningCombo);
+                }
                 
                 if (currentPlayer === 'X') {
                     player1Score++;
@@ -675,6 +734,7 @@
             cells.forEach(cell => {
                 cell.textContent = '';
                 cell.classList.remove('x', 'o');
+                cell.classList.remove('win');
                 cell.disabled = false;
             });
 
@@ -780,6 +840,15 @@
             setTimeout(() => {
                 winnerModal.classList.add('show');
             }, 500);
+        }
+
+        function highlightWinningCells(indices) {
+            indices.forEach(index => {
+                const cell = cells[index];
+                if (cell) {
+                    cell.classList.add('win');
+                }
+            });
         }
 
         function closeWinnerModal(e) {
