sync: update docs, agents, services, and content files

--- a/src/pleasantville-crossword.html
+++ b/src/pleasantville-crossword.html
@@ -352,17 +352,17 @@
             ],
             clues: {
                 across: [
-                    { number: 1, clue: "Westchester private eye's job (7)", answer: "DETECTI", row: 0, col: 0, length: 7 },
+                    { number: 1, clue: "Private eye's job (7)", answer: "DETECTI", row: 0, col: 0, length: 7 },
                     { number: 3, clue: "Unsolved case (7)", answer: "MYSTERY", row: 2, col: 0, length: 7 },
-                    { number: 5, clue: "Mamaroneck harbor shadow at dusk (6)", answer: "SHADOW", row: 4, col: 0, length: 6 },
+                    { number: 5, clue: "Dark figure (6)", answer: "SHADOW", row: 4, col: 0, length: 6 },
                     { number: 7, clue: "What detectives follow (5)", answer: "CLUES", row: 6, col: 0, length: 5 }
                 ],
                 down: [
-                    { number: 1, clue: "Scarsdale dames at the country club (5)", answer: "DAMES", row: 0, col: 0, length: 5 },
+                    { number: 1, clue: "Femme fatale (5)", answer: "DAMES", row: 0, col: 0, length: 5 },
                     { number: 2, clue: "Crime scene evidence (5)", answer: "TRACE", row: 0, col: 2, length: 5 },
-                    { number: 4, clue: "White Plains courthouse case files (5)", answer: "STACK", row: 2, col: 2, length: 5 },
+                    { number: 4, clue: "Case file (5)", answer: "STACK", row: 2, col: 2, length: 5 },
                     { number: 6, clue: "Noir atmosphere (5)", answer: "INKY", row: 0, col: 6, length: 4 },
-                    { number: 8, clue: "Hudson River winter ice (3)", answer: "ICE", row: 4, col: 5, length: 3 }
+                    { number: 8, clue: "Cold case (3)", answer: "ICE", row: 4, col: 5, length: 3 }
                 ]
             }
         };
