--- a/src/site-inventory.html
+++ b/src/site-inventory.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Inventory - Bot Sportello</title>
     <link rel="icon" type="image/jpeg" href="../default.jpg">
-    <link rel="stylesheet" href="page-theme.css">
+    <link rel="stylesheet" href="../page-theme.css">
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
