fix: replace nav wrapper with direct anchor for home-link on 2 pages

--- a/src/neo-noir-blizzard.html
+++ b/src/neo-noir-blizzard.html
@@ -260,9 +260,7 @@
     </style>
 </head>
 <body>
-    <nav class="home-link">
-        <a href="../index.html">← BACK TO COLLECTION</a>
-    </nav>
+    <a href="../index.html" class="home-link">←</a>
 
     <div class="visualization-container">
         <h1>NEO-NOIR BLIZZARD</h1>
