--- a/src/quantum-hoax-infomercial.html
+++ b/src/quantum-hoax-infomercial.html
@@ -284,9 +284,7 @@
     </style>
 </head>
 <body>
-    <nav class="home-link">
-        <a href="../index.html">← Home</a>
-    </nav>
+    <a href="../index.html" class="home-link">←</a>
 
     <div class="container">
         <header>
