fix: modular template system for back buttons, remove conflicting style overrides

--- a/src/foot-scratch-game.html
+++ b/src/foot-scratch-game.html
@@ -26,29 +26,7 @@
             }
         }
 
-        .home-link {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            z-index: 1000;
-        }
-
-        .home-link a {
-            color: #7ec8e3;
-            text-decoration: none;
-            font-size: 14px;
-            padding: 8px 12px;
-            border: 2px solid #7ec8e3;
-            border-radius: 4px;
-            transition: all 0.2s;
-            display: inline-block;
-        }
-
-        .home-link a:hover {
-            color: #00ffff;
-            border-color: #00ffff;
-            box-shadow: 0 0 10px rgba(0, 255, 255, 0.3);
-        }
+        /* home-link styling handled by page-theme.css */
 
         .game-container {
             max-width: 600px;
