--- a/src/quantum-hoax-infomercial.html
+++ b/src/quantum-hoax-infomercial.html
@@ -259,28 +259,7 @@
             }
         }
 
-        .home-link {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            z-index: 1000;
-            background: #0a0a0a;
-            padding: 10px;
-            border: 2px solid #7ec8e3;
-            border-radius: 5px;
-        }
-
-        .home-link a {
-            color: #7ec8e3;
-            text-decoration: none;
-            font-weight: bold;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-        }
-
-        .home-link a:hover {
-            color: #00ffff;
-        }
+        /* home-link styling handled by page-theme.css */
     </style>
 </head>
 <body>
