--- a/src/friday-wheel.html
+++ b/src/friday-wheel.html
@@ -157,20 +157,7 @@
             }
         }
 
-        .home-link {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            color: #00ffff;
-            text-decoration: none;
-            font-size: 1.1em;
-            transition: all 0.3s;
-        }
-
-        .home-link:hover {
-            color: #ff0000;
-            text-shadow: 0 0 10px rgba(255, 0, 0, 0.6);
-        }
+        /* home-link styling handled by page-theme.css */
     </style>
 </head>
 <body>
