--- a/src/sleep-sounds-for-cen.html
+++ b/src/sleep-sounds-for-cen.html
@@ -287,9 +287,7 @@
     </style>
 </head>
 <body>
-    <nav class="home-link">
-        <a href="../index.html">← Back to Collection</a>
-    </nav>
+    <a href="../index.html" class="home-link" aria-label="Back to home"></a>
 
     <div class="container">
         <div class="header">
