add story-page class for centered layouts, fix audiocontext deferral, compact presets

--- a/src/peanut-city.html
+++ b/src/peanut-city.html
@@ -6,19 +6,11 @@
     <title>Peanut City - Bot Sportello Noir</title>
     <link rel="stylesheet" href="../page-theme.css">
     <style>
+        /* Uses body.story-page from page-theme.css for centering */
         body {
             padding: 50px 20px 20px 20px;
             background: #0a0a0a;
-            color: #7ec8e3;
-            font-family: 'Courier Prime', monospace;
             line-height: 1.7;
-            overflow-x: hidden;
-        }
-
-        .story-container {
-            max-width: 720px;
-            margin: 0 auto;
-            position: relative;
         }
 
         .chapter {
@@ -294,7 +286,7 @@
         }
     </style>
 </head>
-<body>
+<body class="story-page">
     <a href="../index.html" class="home-link">←</a>
 
     <div class="progress-indicator">
